// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files 1`] = `
Array [
  "account-insert-request.form-group-fac.ts",
  "account-insert-request.model.ts",
  "account-insert-request.properties.ts",
  "account-update-request.form-group-fac.ts",
  "account-update-request.model.ts",
  "account-update-request.properties.ts",
  "account.form-group-fac.ts",
  "account.model.ts",
  "account.properties.ts",
  "contact-insert-request.form-group-fac.ts",
  "contact-insert-request.model.ts",
  "contact-insert-request.properties.ts",
  "contact-update-request.form-group-fac.ts",
  "contact-update-request.model.ts",
  "contact-update-request.properties.ts",
  "contact.form-group-fac.ts",
  "contact.model.ts",
  "contact.properties.ts",
  "endpoints.ts",
  "index.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function AccountFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    refId: new FormControl(''),
    name: new FormControl(''),
    parentAccountId: new FormControl(''),
    isEnabled: new FormControl(''),
    emailInvoice: new FormControl(''),
    tenantId: new FormControl(''),
    parentAccount: new FormControl(''),
    contacts: new FormArray([]),
    inverseParentAccount: new FormArray([]),
  });
};
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
import { IContact } from './contact.model';

export interface IAccount {
  id?: string;
  refId?: string;
  name?: string;
  parentAccountId?: string;
  isEnabled?: boolean;
  emailInvoice?: boolean;
  tenantId?: string;
  parentAccount?: IAccount;
  contacts?: IContact[];
  inverseParentAccount?: IAccount[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum AccountProperties {
  ID = 'id',
  REF_ID = 'refId',
  NAME = 'name',
  PARENT_ACCOUNT_ID = 'parentAccountId',
  IS_ENABLED = 'isEnabled',
  EMAIL_INVOICE = 'emailInvoice',
  TENANT_ID = 'tenantId',
  PARENT_ACCOUNT = 'parentAccount',
  CONTACTS = 'contacts',
  INVERSE_PARENT_ACCOUNT = 'inverseParentAccount',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function AccountInsertRequestFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    refId: new FormControl(''),
    name: new FormControl('', Validators.required),
    parentAccountId: new FormControl(''),
    emailInvoice: new FormControl(''),
    contacts: new FormArray([]),
  });
};
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
import { IContact } from './contact.model';

export interface IAccountInsertRequest {
  id?: string;
  refId?: string;
  name?: string;
  parentAccountId?: string;
  emailInvoice?: boolean;
  contacts?: IContact[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum AccountInsertRequestProperties {
  ID = 'id',
  REF_ID = 'refId',
  NAME = 'name',
  PARENT_ACCOUNT_ID = 'parentAccountId',
  EMAIL_INVOICE = 'emailInvoice',
  CONTACTS = 'contacts',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-update-request.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function AccountUpdateRequestFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    refId: new FormControl('', Validators.required),
    name: new FormControl('', Validators.required),
    parentAccountId: new FormControl(''),
    isEnabled: new FormControl(''),
    emailInvoice: new FormControl(''),
    contacts: new FormArray([]),
  });
};
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-update-request.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
import { IContact } from './contact.model';

export interface IAccountUpdateRequest {
  id?: string;
  refId?: string;
  name?: string;
  parentAccountId?: string;
  isEnabled?: boolean;
  emailInvoice?: boolean;
  contacts?: IContact[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-update-request.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum AccountUpdateRequestProperties {
  ID = 'id',
  REF_ID = 'refId',
  NAME = 'name',
  PARENT_ACCOUNT_ID = 'parentAccountId',
  IS_ENABLED = 'isEnabled',
  EMAIL_INVOICE = 'emailInvoice',
  CONTACTS = 'contacts',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function ContactFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    isEnabled: new FormControl(''),
    contactTypeId: new FormControl('', Validators.required),
    accountId: new FormControl('', Validators.required),
    firstName: new FormControl('', Validators.required),
    lastName: new FormControl('', Validators.required),
    middleName: new FormControl(''),
    addressLine1: new FormControl('', Validators.required),
    addressLine2: new FormControl(''),
    city: new FormControl('', Validators.required),
    state: new FormControl('', Validators.required),
    zip: new FormControl('', Validators.required),
    emails: new FormControl(''),
    phone1: new FormControl(''),
    phone2: new FormControl(''),
    account: new FormControl(''),
  });
};
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
import { IAccount } from './account.model';

export interface IContact {
  id?: string;
  isEnabled?: boolean;
  contactTypeId?: string;
  accountId?: string;
  firstName?: string;
  lastName?: string;
  middleName?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  emails?: string;
  phone1?: string;
  phone2?: string;
  account?: IAccount;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ContactProperties {
  ID = 'id',
  IS_ENABLED = 'isEnabled',
  CONTACT_TYPE_ID = 'contactTypeId',
  ACCOUNT_ID = 'accountId',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  MIDDLE_NAME = 'middleName',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  EMAILS = 'emails',
  PHONE_1 = 'phone1',
  PHONE_2 = 'phone2',
  ACCOUNT = 'account',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function ContactInsertRequestFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    contactTypeId: new FormControl('', Validators.required),
    accountId: new FormControl('', Validators.required),
    firstName: new FormControl('', Validators.required),
    lastName: new FormControl('', Validators.required),
    middleName: new FormControl(''),
    addressLine1: new FormControl('', Validators.required),
    addressLine2: new FormControl(''),
    city: new FormControl('', Validators.required),
    state: new FormControl('', Validators.required),
    zip: new FormControl('', Validators.required),
    emails: new FormControl(''),
    phone1: new FormControl(''),
    phone2: new FormControl(''),
  });
};
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IContactInsertRequest {
  id?: string;
  contactTypeId?: string;
  accountId?: string;
  firstName?: string;
  lastName?: string;
  middleName?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  emails?: string;
  phone1?: string;
  phone2?: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ContactInsertRequestProperties {
  ID = 'id',
  CONTACT_TYPE_ID = 'contactTypeId',
  ACCOUNT_ID = 'accountId',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  MIDDLE_NAME = 'middleName',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  EMAILS = 'emails',
  PHONE_1 = 'phone1',
  PHONE_2 = 'phone2',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function ContactUpdateRequestFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    contactTypeId: new FormControl('', Validators.required),
    accountId: new FormControl('', Validators.required),
    firstName: new FormControl('', Validators.required),
    lastName: new FormControl('', Validators.required),
    middleName: new FormControl(''),
    addressLine1: new FormControl('', Validators.required),
    addressLine2: new FormControl(''),
    city: new FormControl('', Validators.required),
    state: new FormControl('', Validators.required),
    zip: new FormControl('', Validators.required),
    emails: new FormControl(''),
    phone1: new FormControl(''),
    phone2: new FormControl(''),
  });
};
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IContactUpdateRequest {
  id?: string;
  contactTypeId?: string;
  accountId?: string;
  firstName?: string;
  lastName?: string;
  middleName?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  emails?: string;
  phone1?: string;
  phone2?: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ContactUpdateRequestProperties {
  ID = 'id',
  CONTACT_TYPE_ID = 'contactTypeId',
  ACCOUNT_ID = 'accountId',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  MIDDLE_NAME = 'middleName',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  EMAILS = 'emails',
  PHONE_1 = 'phone1',
  PHONE_2 = 'phone2',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: endpoints.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  accounts = '/api/v1/Accounts.{format}',
  contacts = '/api/v1/Contacts.{format}',
}
export interface IEndpoints {
  accounts: string;
  contacts: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: index.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './account-insert-request.form-group-fac';
export * from './account-insert-request.model';
export * from './account-insert-request.properties';
export * from './account-update-request.form-group-fac';
export * from './account-update-request.model';
export * from './account-update-request.properties';
export * from './account.form-group-fac';
export * from './account.model';
export * from './account.properties';
export * from './contact-insert-request.form-group-fac';
export * from './contact-insert-request.model';
export * from './contact-insert-request.properties';
export * from './contact-update-request.form-group-fac';
export * from './contact-update-request.model';
export * from './contact-update-request.properties';
export * from './contact.form-group-fac';
export * from './contact.model';
export * from './contact.properties';
"
`;
